# image_processing_dufour_juret-rafin

./: CMakeLists.txt  README.md  bmp24.c  bmp24.h  bmp8.c  bmp8.h  color_conversion.c  color_conversion.h  main.c  menu_déroulant.c  quotes.c  quotes.h  t_bmp24.h
